Colaboratory를 통해 생성됨

--- a/a1.ipynb
+++ b/a1.ipynb
@@ -6,7 +6,7 @@
       "name": "a1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO6rKb+TAvdk4UpikfcQRvC",
+      "authorship_tag": "ABX9TyPqcypg62dG58KctqADwtyb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -185,7 +185,7 @@
         "total = 0\n",
         "counter = 1\n",
         "while counter <= 10:\n",
-        " grad = int(input (\"Enter grade: \"))\n",
+        " grade = int(input (\"Enter grade: \"))\n",
         " total = grade + total\n",
         " counter = counter + 1\n",
         "average = total / 10\n",
@@ -196,25 +196,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SG8dViDA6Zuv",
-        "outputId": "af954188-4c70-4f47-a7c5-5f5cdbde37f3"
+        "outputId": "08eeb72f-f6e3-4cc9-9397-40a2c6a44b77"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Enter grade: 1\n",
+            "Enter grade: 2\n",
             "Enter grade: 1\n",
             "Enter grade: 2\n",
             "Enter grade: 1\n",
-            "Enter grade: 1\n",
             "Enter grade: 2\n",
-            "Enter grade: 1\n",
             "Enter grade: 1\n",
             "Enter grade: 2\n",
             "Enter grade: 3\n",
-            "4.0\n"
+            "Enter grade: 4\n",
+            "1.9\n"
           ]
         }
       ]
