Colaboratory를 통해 생성됨

--- a/Python_1.ipynb
+++ b/Python_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python_1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOJjysnNasW721dIseITCLm",
+      "authorship_tag": "ABX9TyMR5KquY8S4mez3xdGL0HgL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,6 +118,265 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bhAGArfLNAf9",
+        "outputId": "a0f13cf1-56c3-4462-8e0c-55bc69873c3c"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kthJVuDrNFGH",
+        "outputId": "e9456f48-72fb-4077-a9d5-ffc3045f7e60"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 3; b = 4; c = a + b; print(c); print(a); print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2ovLW6uzNL6W",
+        "outputId": "0c8779e8-98d2-42f2-de73-7fd117515f65"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"안녕하세요.\";\n",
+        "b = \"반갑습니다.\";\n",
+        "c = a + b;\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ah4eP6S5NYYu",
+        "outputId": "7a604f0b-537b-401e-bfcc-a9bf65171b67"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕하세요.반갑습니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"안녕하세요.\";\n",
+        "b = a * 10;\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4MscYt3kOSRL",
+        "outputId": "a70525ce-a2f2-4296-812c-bbb46cb97258"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕하세요.안녕하세요.안녕하세요.안녕하세요.안녕하세요.안녕하세요.안녕하세요.안녕하세요.안녕하세요.안녕하세요.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"###############\")\n",
+        "print(\"#\" * 15)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fEywBL_sOect",
+        "outputId": "107c9f29-2072-468e-dca7-bd9685f53f36"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "###############\n",
+            "###############\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "아버지와 어머니 그리고 삼촌에게 감사한 마음을 전하고 싶습니다.\n",
+        "아버지에게는 10만원, 어머니에게는 15만원, 삼촌에게는 \"감사합니다.\"\n",
+        "변수 : _Father, _Mother, _Uncle"
+      ],
+      "metadata": {
+        "id": "FFwm2e87Ot5h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "_Father = \"100,000\"\n",
+        "_Mother = \"150,000\"\n",
+        "_Uncle = \"감사합니다.\"\n",
+        "print(\"아버지=\", _Father, \"원\")\n",
+        "print(\"어머니=\", _Mother, \"원\")\n",
+        "print(\"삼촌=\", _Uncle)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2HZ6xv-KP5QX",
+        "outputId": "281a031b-8219-4ca5-ac10-71abe11e2d35"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "아버지= 100,000 원\n",
+            "어머니= 150,000 원\n",
+            "삼촌= 감사합니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "변수의 규칙 : 문자 또는 _로 시작(Father, father, _father), 문자, 숫자, _구성(Father69, father55, father_56), 공백은 절대 안된다, 안쓰는 것이 좋다. 특수문자 절대 안된다."
+      ],
+      "metadata": {
+        "id": "DaQbQcr5R9y2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FATHER, father, MOTHER, mother, _Father, _father,  Ketword (True, False, for, while, if, countinue, break, class....)"
+      ],
+      "metadata": {
+        "id": "FYkj_EzLSnof"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "숫자자료형 = 숫자, 문자자료형 = 모든 문자들.."
+      ],
+      "metadata": {
+        "id": "O4XtoyrqTQ-K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 2\n",
+        "b = \"2\"\n",
+        "c = a + int(b)\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S1rh4KzjTlYh",
+        "outputId": "2110ebd0-34f1-476c-94e3-6726955e5dfe"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "형변환 : 정수형으로 변환할 때 int(), 실수형으로 변환하고자 할 때 float(), 문자자료형으로 변환하고자 할 때 str(), int(float(\"2.5\"))"
+      ],
+      "metadata": {
+        "id": "key8Uo2wT03x"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "산술연산자 : + 더하기(print(4+3), - 빼기(print(2-1), * 곱하기(print(5*4), / 나누기(print(4/2), % 나머지 print(5 % 2), // 몫 print(6 // 2), ** 거듭제곱(print(4**2)"
+      ],
+      "metadata": {
+        "id": "LZ1HRcj4UlyZ"
+      }
     }
   ]
 }
